# sbndutil

./: CMakeLists.txt
OpDetSim/: opdet_digi_dat2root.C
cfg/poms/: sbnd_launch.cfg
flux/requests/: bnb_gsimple_v2_8_6d_configB-v1_april07_neutrinoMode.request  bnb_gsimple_v2_8_6d_configC-v1_april07_neutrinoMode.request
flux/xml/: beamConfigurations.xml
python/: CMakeLists.txt  experiment_utilities.py  extractor_dict.py
scripts/: CMakeLists.txt  create_raw_definition_sbnd.py  make_sam_wrapper.sh  make_tar_lar1nd.sh  make_tar_sbnd.sh  make_xml_mcc0.75.sh  make_xml_mcc1.0.sh  make_xml_mcc4.0.sh  make_xml_mcc5.0.sh  make_xml_mcc6.0.sh  make_xml_mcp.sh  make_xml_premcc1.0.sh  setup_lar1nd.sh  submit_lar.sh
scripts/deprecated/: setup_sbnd.sh
scripts/fts/: sbnd_fts_metadataextractor_wrapper.py
scripts/poms/: duplicate_finder_run_subrun.sh  produce_fcl_template.sh  sbndpoms_caf_concatenation.sh  sbndpoms_caf_containation.sh  sbndpoms_duplicate_file_remover.sh  sbndpoms_genfclwithrunnumber_maker.sh  sbndpoms_ifdh_mkdir-p.sh  sbndpoms_metadata_extractor.sh  sbndpoms_metadata_injector.sh  sbndpoms_runnumber_injector.sh  sbndpoms_tfilemetadata_extractor.sh  sbndpoms_wrapperfcl_maker.sh
scripts/projectpy/: make_xml_mcc1.0.sh  make_xml_mcp.sh
ups/: product_deps  setup_for_development
xml/: CMakeLists.txt
xml/mcc/: CMakeLists.txt
xml/opticallib/: OpticalLibraryBuildInfov4.sh  prod_optical_lar1nd.xml  prod_optical_lar1nd_pmts.xml  prod_optical_sbnd_pmts.xml
xml/osgtest/: CMakeLists.txt  prod_eminus_0.1-2.0GeV_isotropic_3window_lar1nd.xml  prod_eminus_0.1-2.0GeV_isotropic_3window_sbnd.xml  prod_eminus_0.1-2.0GeV_isotropic_t0_lar1nd.xml  prod_eminus_0.1-2.0GeV_isotropic_t0_sbnd.xml  (+106 more)
(+131 files in other folders)
